tests/ui/enum-not-struct.stderr
error: TypeStateBuilder only supports structs, not enums
 --> tests/ui/enum-not-struct.rs:5:1
  |
5 | / enum NotAStruct {
6 | |     Variant1(String),
7 | |     Variant2 { field: u32 },
8 | | }
  | |_^
